# rose

./: CHANGELOG.md  example.rose  package.json  rose-lang.cabal  tsconfig.json
app/: Main.hs
src/Rose/: Parser.hs
src/Rose/Parser/: Language.hs
src/Rose/Parser/Ast/: Common.hs  Definition.hs  Expr.hs  Module.hs
test/: TestHelper.hs
test/Rose/Parser/: LanguageSpec.hs
test/Test/Hspec/Megaparsec/: Extra.hs
